Fixed Add Menu overflow and added delete season button

--- a/css/list.css
+++ b/css/list.css
@@ -15,6 +15,7 @@ body {
     height: 70%;
     background-color: rgb(177, 177, 177);
     padding: 10px;
+    overflow-y: auto;
 }
 
 #addMenuHeader {
